libstdc++-v3/testsuite/25_algorithms/generate_n/87982_neg.cc
// Copyright (C) 2019-2025 Free Software Foundation, Inc.
//
// This file is part of the GNU ISO C++ Library.  This library is free
// software; you can redistribute it and/or modify it under the
// terms of the GNU General Public License as published by the
// Free Software Foundation; either version 3, or (at your option)
// any later version.

// This library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.

// You should have received a copy of the GNU General Public License along
// with this library; see the file COPYING3.  If not see
// <http://www.gnu.org/licenses/>.

// { dg-do compile }

#include <algorithm>

// PR libstdc++/87982

void test01()
{
  int gen(); // { dg-warning "empty parentheses" }
  int a[2];
  std::generate_n(a, a+2, &gen);
}

// { dg-error "no matching function" "" { target *-*-* } 0 }
// { dg-prune-output "invalid conversion" }
